Fix gap at top of node-list

--- a/src/components/node-list/styles/node-list.scss
+++ b/src/components/node-list/styles/node-list.scss
@@ -11,6 +11,7 @@
 
 .pipeline-nodelist {
   flex-grow: 1;
+  padding-top: 1.8em;
 
   &--fade {
     > * {
