--- a/src/components/pipeline-list/pipeline-list.scss
+++ b/src/components/pipeline-list/pipeline-list.scss
@@ -2,8 +2,6 @@
 @import '../../styles/variables';
 
 .pipeline-list {
-  padding-bottom: 1.8em;
-
   .kui-dropdown {
     display: block;
     border: none;
